MyProject/force-app/main/default/objects/Booking__c/fields/HotelId__c.field-meta.xml
<CustomField>
    <fullName>HotelId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HotelId</label>
    <referenceTo>Hotel__c</referenceTo>
    <relationshipLabel>Bookings (HotelId)</relationshipLabel>
    <relationshipName>Bookings1</relationshipName>
    <type>Lookup</type>
</CustomField>